<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardFragment">

    <Button
        android:id="@+id/lettiHomeButton"
        android:layout_width="209dp"
        android:layout_height="73dp"
        android:fontFamily="@font/armata"
        android:text="Lista letti"
        android:textColor="#0C0C0C"
        android:backgroundTint="#fff"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"/>

    <Button
        android:id="@+id/daleggereHomeButton"
        android:layout_width="200dp"
        android:layout_height="73dp"
        android:fontFamily="@font/armata"
        android:text="Lista da leggere"
        android:textColor="#0C0C0C"
        android:backgroundTint="#fff"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"/>

    <ListView
        android:id="@+id/listaHome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/daleggereHomeButton"/>

</RelativeLayout>