<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/tobereadlistImage"
        android:layout_width="70dp"
        android:layout_height="72dp"
        android:layout_alignParentLeft="true"/>

    <TextView
        android:id="@+id/tobereadlistTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_toRightOf="@id/tobereadlistImage"
        android:text="Titolo:"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/tobereadlistAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/tobereadlistTitle"
        android:layout_toRightOf="@id/tobereadlistImage"
        android:text="Autore:"
        android:textSize="20dp"/>

    <Button
        android:id="@+id/addToRead"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_toLeftOf="@id/deleteToBeRead"
        android:layout_marginRight="10dp"
        android:text="+"
        android:textSize="20dp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/deleteToBeRead"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:text="-"
        android:textSize="20dp"
        android:textStyle="bold"/>

</RelativeLayout>